# VenvCleaner

./: README.md  pyproject.toml
src/venvcleaner/: main.py
test/: make_test_venvs.py
