[project]
name = "venvcleaner"
dynamic = ["version"]
authors = [
    { name = "yamakox", email="notolog.tech@gmail.com" }
]
description = "A GUI tool for cleaning up Python virtual environments (venv directories)."
readme = "README.md"
license = "MIT"
license-files = [ "LICENSE" ]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta", 
]
dependencies = [
    "click>=8.3.0",
    "wxpython>=4.2.1",
]

[project.urls]
Homepage = "https://github.com/yamakox/VenvCleaner"
Repository = "https://github.com/yamakox/VenvCleaner.git"
Issues = "https://github.com/yamakox/VenvCleaner/issues"

[project.scripts]
venvcleaner = "venvcleaner:main"

[build-system]
requires = ["poetry-core>=2,<3", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
version = "0.0.0"

[tool.poetry-dynamic-versioning]
enable = true
